HW03/Yacc/y.output
State 19 conflicts: 1 reduce/reduce


Grammar

    0 $accept: START $end

    1 START: /* empty */
    2      | INPUT

    3 INPUT: EXPLIST

    4 EXPLIST: EXP
    5        | OP_OP EXPLIST EXP OP_CP
    6        | EXPLIST EXP

    7 EXP: OP_OP OP_PLUS EXP EXP OP_CP
    8    | OP_OP OP_MINUS EXP EXP OP_CP
    9    | OP_OP OP_MULT EXP EXP OP_CP
   10    | OP_OP OP_DIV EXP EXP OP_CP
   11    | OP_OP KW_IF EXPB EXP EXP OP_CP
   12    | OP_OP KW_IF EXPB EXP OP_CP
   13    | OP_OP KW_FOR OP_OP IDENTIFIER EXP EXP OP_CP EXPLIST OP_CP
   14    | OP_OP KW_WHILE EXPB EXP OP_CP
   15    | OP_OP KW_PRINT EXP OP_CP
   16    | OP_OP KW_EXIT OP_CP
   17    | OP_OP KW_DEFFUN IDENTIFIER OP_OP PARAMLIST OP_CP EXPLIST OP_CP
   18    | EXPB
   19    | LIST_INPUT
   20    | SET
   21    | OP_OP KW_DEFVAR IDENTIFIER EXP OP_CP
   22    | FCALL
   23    | OP_OP KW_LOAD OP_QUOTE IDENTIFIER OP_CP
   24    | COMMENT
   25    | VALUEF
   26    | VALUEI

   27 LIST_INPUT: OP_OP KW_APPEND LIST_INPUT LIST_INPUT OP_CP
   28           | OP_OP KW_CONCAT LIST_INPUT LIST_INPUT OP_CP
   29           | LIST

   30 SET: OP_OP KW_SET IDENTIFIER EXP OP_CP

   31 LIST: OP_OP KW_LIST VALUES OP_CP
   32     | OP_APOSTROPHE OP_OP OP_CP
   33     | KW_NIL
   34     | OP_APOSTROPHE OP_OP VALUES OP_CP

   35 VALUES: VALUEI
   36       | VALUEF
   37       | IDENTIFIER
   38       | VALUES OP_COMMA VALUEF
   39       | VALUES OP_COMMA VALUEI
   40       | VALUES OP_COMMA IDENTIFIER

   41 FCALL: OP_OP IDENTIFIER PARAMLIST OP_CP

   42 PARAMLIST: /* empty */
   43          | PARAMLIST IDENTIFIER

   44 EXPB: OP_OP KW_AND EXPB EXPB OP_CP
   45     | OP_OP KW_OR EXPB EXPB OP_CP
   46     | OP_OP KW_NOT EXPB OP_CP
   47     | OP_OP KW_LESS EXP EXP OP_CP
   48     | OP_OP KW_EQUAL EXP EXP OP_CP
   49     | KW_TRUE
   50     | KW_FALSE
   51     | IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
VALUEI (258) 26 35 39
VALUEF (259) 25 36 38
IDENTIFIER (260) 13 17 21 23 30 37 40 41 43 51
KW_AND (261) 44
KW_OR (262) 45
KW_NOT (263) 46
KW_LESS (264) 47
KW_LIST (265) 31
KW_CONCAT (266) 28
KW_DEFFUN (267) 17
KW_IF (268) 11 12
KW_LOAD (269) 23
KW_TRUE (270) 49
KW_EQUAL (271) 48
KW_NIL (272) 33
KW_APPEND (273) 27
KW_SET (274) 30
KW_FOR (275) 13
KW_EXIT (276) 16
KW_PRINT (277) 15
KW_FALSE (278) 50
KW_DEFVAR (279) 21
KW_WHILE (280) 14
OP_PLUS (281) 7
OP_MINUS (282) 8
OP_MULT (283) 9
OP_DIV (284) 10
OP_OP (285) 5 7 8 9 10 11 12 13 14 15 16 17 21 23 27 28 30 31 32 34
    41 44 45 46 47 48
OP_CP (286) 5 7 8 9 10 11 12 13 14 15 16 17 21 23 27 28 30 31 32 34
    41 44 45 46 47 48
OP_COMMA (287) 38 39 40
OP_APOSTROPHE (288) 32 34
OP_QUOTE (289) 23
COMMENT (290) 24


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
START (37)
    on left: 1 2, on right: 0
INPUT (38)
    on left: 3, on right: 2
EXPLIST (39)
    on left: 4 5 6, on right: 3 5 6 13 17
EXP (40)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
    26, on right: 4 5 6 7 8 9 10 11 12 13 14 15 21 30 47 48
LIST_INPUT (41)
    on left: 27 28 29, on right: 19 27 28
SET (42)
    on left: 30, on right: 20
LIST (43)
    on left: 31 32 33 34, on right: 29
VALUES (44)
    on left: 35 36 37 38 39 40, on right: 31 34 38 39 40
FCALL (45)
    on left: 41, on right: 22
PARAMLIST (46)
    on left: 42 43, on right: 17 41 43
EXPB (47)
    on left: 44 45 46 47 48 49 50 51, on right: 11 12 14 18 44 45 46


state 0

    0 $accept: . START $end

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 7
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    $default  reduce using rule 1 (START)

    START       go to state 10
    INPUT       go to state 11
    EXPLIST     go to state 12
    EXP         go to state 13
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 1

   26 EXP: VALUEI .

    $default  reduce using rule 26 (EXP)


state 2

   25 EXP: VALUEF .

    $default  reduce using rule 25 (EXP)


state 3

   51 EXPB: IDENTIFIER .

    $default  reduce using rule 51 (EXPB)


state 4

   49 EXPB: KW_TRUE .

    $default  reduce using rule 49 (EXPB)


state 5

   33 LIST: KW_NIL .

    $default  reduce using rule 33 (LIST)


state 6

   50 EXPB: KW_FALSE .

    $default  reduce using rule 50 (EXPB)


state 7

    5 EXPLIST: OP_OP . EXPLIST EXP OP_CP
    7 EXP: OP_OP . OP_PLUS EXP EXP OP_CP
    8    | OP_OP . OP_MINUS EXP EXP OP_CP
    9    | OP_OP . OP_MULT EXP EXP OP_CP
   10    | OP_OP . OP_DIV EXP EXP OP_CP
   11    | OP_OP . KW_IF EXPB EXP EXP OP_CP
   12    | OP_OP . KW_IF EXPB EXP OP_CP
   13    | OP_OP . KW_FOR OP_OP IDENTIFIER EXP EXP OP_CP EXPLIST OP_CP
   14    | OP_OP . KW_WHILE EXPB EXP OP_CP
   15    | OP_OP . KW_PRINT EXP OP_CP
   16    | OP_OP . KW_EXIT OP_CP
   17    | OP_OP . KW_DEFFUN IDENTIFIER OP_OP PARAMLIST OP_CP EXPLIST OP_CP
   21    | OP_OP . KW_DEFVAR IDENTIFIER EXP OP_CP
   23    | OP_OP . KW_LOAD OP_QUOTE IDENTIFIER OP_CP
   27 LIST_INPUT: OP_OP . KW_APPEND LIST_INPUT LIST_INPUT OP_CP
   28           | OP_OP . KW_CONCAT LIST_INPUT LIST_INPUT OP_CP
   30 SET: OP_OP . KW_SET IDENTIFIER EXP OP_CP
   31 LIST: OP_OP . KW_LIST VALUES OP_CP
   41 FCALL: OP_OP . IDENTIFIER PARAMLIST OP_CP
   44 EXPB: OP_OP . KW_AND EXPB EXPB OP_CP
   45     | OP_OP . KW_OR EXPB EXPB OP_CP
   46     | OP_OP . KW_NOT EXPB OP_CP
   47     | OP_OP . KW_LESS EXP EXP OP_CP
   48     | OP_OP . KW_EQUAL EXP EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 19
    KW_AND         shift, and go to state 20
    KW_OR          shift, and go to state 21
    KW_NOT         shift, and go to state 22
    KW_LESS        shift, and go to state 23
    KW_LIST        shift, and go to state 24
    KW_CONCAT      shift, and go to state 25
    KW_DEFFUN      shift, and go to state 26
    KW_IF          shift, and go to state 27
    KW_LOAD        shift, and go to state 28
    KW_TRUE        shift, and go to state 4
    KW_EQUAL       shift, and go to state 29
    KW_NIL         shift, and go to state 5
    KW_APPEND      shift, and go to state 30
    KW_SET         shift, and go to state 31
    KW_FOR         shift, and go to state 32
    KW_EXIT        shift, and go to state 33
    KW_PRINT       shift, and go to state 34
    KW_FALSE       shift, and go to state 6
    KW_DEFVAR      shift, and go to state 35
    KW_WHILE       shift, and go to state 36
    OP_PLUS        shift, and go to state 37
    OP_MINUS       shift, and go to state 38
    OP_MULT        shift, and go to state 39
    OP_DIV         shift, and go to state 40
    OP_OP          shift, and go to state 7
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXPLIST     go to state 41
    EXP         go to state 13
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 8

   32 LIST: OP_APOSTROPHE . OP_OP OP_CP
   34     | OP_APOSTROPHE . OP_OP VALUES OP_CP

    OP_OP  shift, and go to state 42


state 9

   24 EXP: COMMENT .

    $default  reduce using rule 24 (EXP)


state 10

    0 $accept: START . $end

    $end  shift, and go to state 43


state 11

    2 START: INPUT .

    $default  reduce using rule 2 (START)


state 12

    3 INPUT: EXPLIST .
    6 EXPLIST: EXPLIST . EXP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    $default  reduce using rule 3 (INPUT)

    EXP         go to state 45
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 13

    4 EXPLIST: EXP .

    $default  reduce using rule 4 (EXPLIST)


state 14

   19 EXP: LIST_INPUT .

    $default  reduce using rule 19 (EXP)


state 15

   20 EXP: SET .

    $default  reduce using rule 20 (EXP)


state 16

   29 LIST_INPUT: LIST .

    $default  reduce using rule 29 (LIST_INPUT)


state 17

   22 EXP: FCALL .

    $default  reduce using rule 22 (EXP)


state 18

   18 EXP: EXPB .

    $default  reduce using rule 18 (EXP)


state 19

   41 FCALL: OP_OP IDENTIFIER . PARAMLIST OP_CP
   51 EXPB: IDENTIFIER .

    IDENTIFIER  reduce using rule 42 (PARAMLIST)
    IDENTIFIER  [reduce using rule 51 (EXPB)]
    OP_CP       reduce using rule 42 (PARAMLIST)
    $default    reduce using rule 51 (EXPB)

    PARAMLIST  go to state 46


state 20

   44 EXPB: OP_OP KW_AND . EXPB EXPB OP_CP

    IDENTIFIER  shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 6
    OP_OP       shift, and go to state 47

    EXPB  go to state 48


state 21

   45 EXPB: OP_OP KW_OR . EXPB EXPB OP_CP

    IDENTIFIER  shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 6
    OP_OP       shift, and go to state 47

    EXPB  go to state 49


state 22

   46 EXPB: OP_OP KW_NOT . EXPB OP_CP

    IDENTIFIER  shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 6
    OP_OP       shift, and go to state 47

    EXPB  go to state 50


state 23

   47 EXPB: OP_OP KW_LESS . EXP EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 51
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 24

   31 LIST: OP_OP KW_LIST . VALUES OP_CP

    VALUEI      shift, and go to state 52
    VALUEF      shift, and go to state 53
    IDENTIFIER  shift, and go to state 54

    VALUES  go to state 55


state 25

   28 LIST_INPUT: OP_OP KW_CONCAT . LIST_INPUT LIST_INPUT OP_CP

    KW_NIL         shift, and go to state 5
    OP_OP          shift, and go to state 56
    OP_APOSTROPHE  shift, and go to state 8

    LIST_INPUT  go to state 57
    LIST        go to state 16


state 26

   17 EXP: OP_OP KW_DEFFUN . IDENTIFIER OP_OP PARAMLIST OP_CP EXPLIST OP_CP

    IDENTIFIER  shift, and go to state 58


state 27

   11 EXP: OP_OP KW_IF . EXPB EXP EXP OP_CP
   12    | OP_OP KW_IF . EXPB EXP OP_CP

    IDENTIFIER  shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 6
    OP_OP       shift, and go to state 47

    EXPB  go to state 59


state 28

   23 EXP: OP_OP KW_LOAD . OP_QUOTE IDENTIFIER OP_CP

    OP_QUOTE  shift, and go to state 60


state 29

   48 EXPB: OP_OP KW_EQUAL . EXP EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 61
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 30

   27 LIST_INPUT: OP_OP KW_APPEND . LIST_INPUT LIST_INPUT OP_CP

    KW_NIL         shift, and go to state 5
    OP_OP          shift, and go to state 56
    OP_APOSTROPHE  shift, and go to state 8

    LIST_INPUT  go to state 62
    LIST        go to state 16


state 31

   30 SET: OP_OP KW_SET . IDENTIFIER EXP OP_CP

    IDENTIFIER  shift, and go to state 63


state 32

   13 EXP: OP_OP KW_FOR . OP_OP IDENTIFIER EXP EXP OP_CP EXPLIST OP_CP

    OP_OP  shift, and go to state 64


state 33

   16 EXP: OP_OP KW_EXIT . OP_CP

    OP_CP  shift, and go to state 65


state 34

   15 EXP: OP_OP KW_PRINT . EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 66
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 35

   21 EXP: OP_OP KW_DEFVAR . IDENTIFIER EXP OP_CP

    IDENTIFIER  shift, and go to state 67


state 36

   14 EXP: OP_OP KW_WHILE . EXPB EXP OP_CP

    IDENTIFIER  shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 6
    OP_OP       shift, and go to state 47

    EXPB  go to state 68


state 37

    7 EXP: OP_OP OP_PLUS . EXP EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 69
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 38

    8 EXP: OP_OP OP_MINUS . EXP EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 70
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 39

    9 EXP: OP_OP OP_MULT . EXP EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 71
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 40

   10 EXP: OP_OP OP_DIV . EXP EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 72
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 41

    5 EXPLIST: OP_OP EXPLIST . EXP OP_CP
    6        | EXPLIST . EXP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 73
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 42

   32 LIST: OP_APOSTROPHE OP_OP . OP_CP
   34     | OP_APOSTROPHE OP_OP . VALUES OP_CP

    VALUEI      shift, and go to state 52
    VALUEF      shift, and go to state 53
    IDENTIFIER  shift, and go to state 54
    OP_CP       shift, and go to state 74

    VALUES  go to state 75


state 43

    0 $accept: START $end .

    $default  accept


state 44

    7 EXP: OP_OP . OP_PLUS EXP EXP OP_CP
    8    | OP_OP . OP_MINUS EXP EXP OP_CP
    9    | OP_OP . OP_MULT EXP EXP OP_CP
   10    | OP_OP . OP_DIV EXP EXP OP_CP
   11    | OP_OP . KW_IF EXPB EXP EXP OP_CP
   12    | OP_OP . KW_IF EXPB EXP OP_CP
   13    | OP_OP . KW_FOR OP_OP IDENTIFIER EXP EXP OP_CP EXPLIST OP_CP
   14    | OP_OP . KW_WHILE EXPB EXP OP_CP
   15    | OP_OP . KW_PRINT EXP OP_CP
   16    | OP_OP . KW_EXIT OP_CP
   17    | OP_OP . KW_DEFFUN IDENTIFIER OP_OP PARAMLIST OP_CP EXPLIST OP_CP
   21    | OP_OP . KW_DEFVAR IDENTIFIER EXP OP_CP
   23    | OP_OP . KW_LOAD OP_QUOTE IDENTIFIER OP_CP
   27 LIST_INPUT: OP_OP . KW_APPEND LIST_INPUT LIST_INPUT OP_CP
   28           | OP_OP . KW_CONCAT LIST_INPUT LIST_INPUT OP_CP
   30 SET: OP_OP . KW_SET IDENTIFIER EXP OP_CP
   31 LIST: OP_OP . KW_LIST VALUES OP_CP
   41 FCALL: OP_OP . IDENTIFIER PARAMLIST OP_CP
   44 EXPB: OP_OP . KW_AND EXPB EXPB OP_CP
   45     | OP_OP . KW_OR EXPB EXPB OP_CP
   46     | OP_OP . KW_NOT EXPB OP_CP
   47     | OP_OP . KW_LESS EXP EXP OP_CP
   48     | OP_OP . KW_EQUAL EXP EXP OP_CP

    IDENTIFIER  shift, and go to state 76
    KW_AND      shift, and go to state 20
    KW_OR       shift, and go to state 21
    KW_NOT      shift, and go to state 22
    KW_LESS     shift, and go to state 23
    KW_LIST     shift, and go to state 24
    KW_CONCAT   shift, and go to state 25
    KW_DEFFUN   shift, and go to state 26
    KW_IF       shift, and go to state 27
    KW_LOAD     shift, and go to state 28
    KW_EQUAL    shift, and go to state 29
    KW_APPEND   shift, and go to state 30
    KW_SET      shift, and go to state 31
    KW_FOR      shift, and go to state 32
    KW_EXIT     shift, and go to state 33
    KW_PRINT    shift, and go to state 34
    KW_DEFVAR   shift, and go to state 35
    KW_WHILE    shift, and go to state 36
    OP_PLUS     shift, and go to state 37
    OP_MINUS    shift, and go to state 38
    OP_MULT     shift, and go to state 39
    OP_DIV      shift, and go to state 40


state 45

    6 EXPLIST: EXPLIST EXP .

    $default  reduce using rule 6 (EXPLIST)


state 46

   41 FCALL: OP_OP IDENTIFIER PARAMLIST . OP_CP
   43 PARAMLIST: PARAMLIST . IDENTIFIER

    IDENTIFIER  shift, and go to state 77
    OP_CP       shift, and go to state 78


state 47

   44 EXPB: OP_OP . KW_AND EXPB EXPB OP_CP
   45     | OP_OP . KW_OR EXPB EXPB OP_CP
   46     | OP_OP . KW_NOT EXPB OP_CP
   47     | OP_OP . KW_LESS EXP EXP OP_CP
   48     | OP_OP . KW_EQUAL EXP EXP OP_CP

    KW_AND    shift, and go to state 20
    KW_OR     shift, and go to state 21
    KW_NOT    shift, and go to state 22
    KW_LESS   shift, and go to state 23
    KW_EQUAL  shift, and go to state 29


state 48

   44 EXPB: OP_OP KW_AND EXPB . EXPB OP_CP

    IDENTIFIER  shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 6
    OP_OP       shift, and go to state 47

    EXPB  go to state 79


state 49

   45 EXPB: OP_OP KW_OR EXPB . EXPB OP_CP

    IDENTIFIER  shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 6
    OP_OP       shift, and go to state 47

    EXPB  go to state 80


state 50

   46 EXPB: OP_OP KW_NOT EXPB . OP_CP

    OP_CP  shift, and go to state 81


state 51

   47 EXPB: OP_OP KW_LESS EXP . EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 82
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 52

   35 VALUES: VALUEI .

    $default  reduce using rule 35 (VALUES)


state 53

   36 VALUES: VALUEF .

    $default  reduce using rule 36 (VALUES)


state 54

   37 VALUES: IDENTIFIER .

    $default  reduce using rule 37 (VALUES)


state 55

   31 LIST: OP_OP KW_LIST VALUES . OP_CP
   38 VALUES: VALUES . OP_COMMA VALUEF
   39       | VALUES . OP_COMMA VALUEI
   40       | VALUES . OP_COMMA IDENTIFIER

    OP_CP     shift, and go to state 83
    OP_COMMA  shift, and go to state 84


state 56

   27 LIST_INPUT: OP_OP . KW_APPEND LIST_INPUT LIST_INPUT OP_CP
   28           | OP_OP . KW_CONCAT LIST_INPUT LIST_INPUT OP_CP
   31 LIST: OP_OP . KW_LIST VALUES OP_CP

    KW_LIST    shift, and go to state 24
    KW_CONCAT  shift, and go to state 25
    KW_APPEND  shift, and go to state 30


state 57

   28 LIST_INPUT: OP_OP KW_CONCAT LIST_INPUT . LIST_INPUT OP_CP

    KW_NIL         shift, and go to state 5
    OP_OP          shift, and go to state 56
    OP_APOSTROPHE  shift, and go to state 8

    LIST_INPUT  go to state 85
    LIST        go to state 16


state 58

   17 EXP: OP_OP KW_DEFFUN IDENTIFIER . OP_OP PARAMLIST OP_CP EXPLIST OP_CP

    OP_OP  shift, and go to state 86


state 59

   11 EXP: OP_OP KW_IF EXPB . EXP EXP OP_CP
   12    | OP_OP KW_IF EXPB . EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 87
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 60

   23 EXP: OP_OP KW_LOAD OP_QUOTE . IDENTIFIER OP_CP

    IDENTIFIER  shift, and go to state 88


state 61

   48 EXPB: OP_OP KW_EQUAL EXP . EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 89
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 62

   27 LIST_INPUT: OP_OP KW_APPEND LIST_INPUT . LIST_INPUT OP_CP

    KW_NIL         shift, and go to state 5
    OP_OP          shift, and go to state 56
    OP_APOSTROPHE  shift, and go to state 8

    LIST_INPUT  go to state 90
    LIST        go to state 16


state 63

   30 SET: OP_OP KW_SET IDENTIFIER . EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 91
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 64

   13 EXP: OP_OP KW_FOR OP_OP . IDENTIFIER EXP EXP OP_CP EXPLIST OP_CP

    IDENTIFIER  shift, and go to state 92


state 65

   16 EXP: OP_OP KW_EXIT OP_CP .

    $default  reduce using rule 16 (EXP)


state 66

   15 EXP: OP_OP KW_PRINT EXP . OP_CP

    OP_CP  shift, and go to state 93


state 67

   21 EXP: OP_OP KW_DEFVAR IDENTIFIER . EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 94
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 68

   14 EXP: OP_OP KW_WHILE EXPB . EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 95
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 69

    7 EXP: OP_OP OP_PLUS EXP . EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 96
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 70

    8 EXP: OP_OP OP_MINUS EXP . EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 97
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 71

    9 EXP: OP_OP OP_MULT EXP . EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 98
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 72

   10 EXP: OP_OP OP_DIV EXP . EXP OP_CP

    VALUEI         shift, and go to state 1
    VALUEF         shift, and go to state 2
    IDENTIFIER     shift, and go to state 3
    KW_TRUE        shift, and go to state 4
    KW_NIL         shift, and go to state 5
    KW_FALSE       shift, and go to state 6
    OP_OP          shift, and go to state 44
    OP_APOSTROPHE  shift, and go to state 8
    COMMENT        shift, and go to state 9

    EXP         go to state 99
    LIST_INPUT  go to state 14
    SET         go to state 15
    LIST        go to state 16
    FCALL       go to state 17
    EXPB        go to state 18


state 73

    5 EXPLIST: OP_OP EXPLIST EXP . OP_CP
    6        | EXPLIST EXP .
